--- a/index.html
+++ b/index.html
@@ -201,16 +201,16 @@
   <div class="container">
     <div class="app-title">MRMODS App v1</div>
     
-    <!-- زر مع رابط -->
-    <a href="main.html" class="icon-btn" target="_blank">
+    <!-- زر مع رابط ينتقل في نفس النافذة -->
+    <a href="main.html" class="icon-btn">
       <i class="fas fa-certificate"></i>
-        شهادات مجانية للآيفون
+      شهادات مجانية للآيفون
     </a>
 
     <div class="buttons-container">
-      <a href="https://t.me/MRMods_Official" class="purple-btn" target="_blank">قناة التيليجرام</a>
-      <a href="https://youtube.com/@mrmods-official?si=yerMnGfEtwMpasNW" class="purple-btn" target="_blank">قناة اليوتيوب</a>
-      <a href="https://mrmods-repo.netlify.app/" class="purple-btn" target="_blank">سورس الجيليبريك</a>
+      <a href="https://t.me/MRMods_Official" class="purple-btn">قناة التيليجرام</a>
+      <a href="https://youtube.com/@mrmods-official?si=yerMnGfEtwMpasNW" class="purple-btn">قناة اليوتيوب</a>
+      <a href="https://mrmods-repo.netlify.app/" class="purple-btn">سورس الجيليبريك</a>
     </div>
   </div>
 </body>
