--- a/main.html
+++ b/main.html
@@ -237,15 +237,15 @@ NREH ESTATE INFORMATION TECHNOLOGY CO.,LTD.
 2025-07-01 20:55:04 GMT+08:00
 
   الحالة:
-🟢الشهادة تعمل
+🔴الشهادة لاتعمل
 
       </pre>
     </div>
 
     <!-- زر التحميل المباشر -->
-    <a href="https://filesharingbot-by-aj.onrender.com/dl/686524f8874536a1670e15ed" class="download-btn" download>
+    <a href="zzzzzzz" class="download-btn" download>
       تحميل ملف الشهادة
-      <a href="https://sign.applep12.com/Install/68644b0a-055c-e901-003f-51fb201a44f2" class="download-btn" download>
+      <a href="zzzzzz" class="download-btn" download>
       تثبيت ايساين مباشر
     </a>
 </body>
