--- a/index.html
+++ b/index.html
@@ -5,69 +5,194 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MRMODS App v1</title>
 
+  <!-- تعيين أيقونة الموقع (favicon) -->
   <link rel="icon" href="https://cdn4.cdn-telegram.org/file/WPXRkyFdcvM5hfu21Wa5KwzYv1FtqXW8be8_WnhrdqNHTDE2qqbKQOYUmpljZgOgdBOeA77gcOz8u7Wg5N38NY01N3x3UUNyQ3DqOSEf71qLscTEL4XTwSwkmi93w__8w3RVDrkRPdj5jOKP5_2dbNgOLL0VDIH_ZEcNLh2SRegiCeyNuw7th83OUXd_bZ1AFos_fSXKKAmwl9w4Ugf-PfrDvoCPkGixpU7tO68o5oNNPotet8I6WZ234_kBQRYtxZOqL5iVwUFLK-DEun1jwJyZCFZwvL6U6pQbvLBhL_tymJ0hlPf94gBXkaFSgiD8TUEf6v1yUmImWi0FB1xxeA.jpg" type="image/jpeg">
   
-  <!-- ربط ملف المانيفست -->
-  <link rel="manifest" href="/manifest.json">
+  <!-- المانيفست -->
+  <link rel="manifest" href="data:application/json,{
+    "name": "MRMODS App v1",
+    "short_name": "MRMODS v1",
+    "start_url": "./index.html",
+    "display": "standalone",
+    "background_color": "#000000",
+    "theme_color": "#2F3BA2",
+    "icons": [
+      {
+        "src": "https://cdn4.cdn-telegram.org/file/WPXRkyFdcvM5hfu21Wa5KwzYv1FtqXW8be8_WnhrdqNHTDE2qqbKQOYUmpljZgOgdBOeA77gcOz8u7Wg5N38NY01N3x3UUNyQ3DqOSEf71qLscTEL4XTwSwkmi93w__8w3RVDrkRPdj5jOKP5_2dbNgOLL0VDIH_ZEcNLh2SRegiCeyNuw7th83OUXd_bZ1AFos_fSXKKAmwl9w4Ugf-PfrDvoCPkGixpU7tO68o5oNNPotet8I6WZ234_kBQRYtxZOqL5iVwUFLK-DEun1jwJyZCFZwvL6U6pQbvLBhL_tymJ0hlPf94gBXkaFSgiD8TUEf6v1yUmImWi0FB1xxeA.jpg",
+        "sizes": "192x192",
+        "type": "image/jpg"
+      },
+      {
+        "src": "https://cdn4.cdn-telegram.org/file/WPXRkyFdcvM5hfu21Wa5KwzYv1FtqXW8be8_WnhrdqNHTDE2qqbKQOYUmpljZgOgdBOeA77gcOz8u7Wg5N38NY01N3x3UUNyQ3DqOSEf71qLscTEL4XTwSwkmi93w__8w3RVDrkRPdj5jOKP5_2dbNgOLL0VDIH_ZEcNLh2SRegiCeyNuw7th83OUXd_bZ1AFos_fSXKKAmwl9w4Ugf-PfrDvoCPkGixpU7tO68o5oNNPotet8I6WZ234_kBQRYtxZOqL5iVwUFLK-DEun1jwJyZCFZwvL6U6pQbvLBhL_tymJ0hlPf94gBXkaFSgiD8TUEf6v1yUmImWi0FB1xxeA.jpg",
+        "sizes": "512x512",
+        "type": "image/jpg"
+      }
+    ]
+  }">
 
   <meta name="theme-color" content="#2F3BA2">
+
+  <!-- الخطوط -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   
+  <!-- إضافة أيقونات FontAwesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
   <style>
     body {
       font-family: 'Roboto', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f1f1f1;
+      background: url('https://server.wallpaperalchemy.com/storage/wallpapers/50/majestic-lighthouse-on-icy-cliff-4k-wallpaper.jpg') no-repeat center center fixed;
+      background-size: cover;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      color: white;
+      animation: fadeIn 2s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      0% { opacity: 0; }
+      100% { opacity: 1; }
     }
 
     .container {
       text-align: center;
-      padding: 50px 20px;
+      background: rgba(255, 255, 255, 0.1);
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+      max-width: 600px;
+      width: 90%;
+      border: 2px solid rgba(255, 255, 255, 0.2);
+      animation: slideUp 1s ease-out;
+    }
+
+    @keyframes slideUp {
+      0% { transform: translateY(50px); opacity: 0; }
+      100% { transform: translateY(0); opacity: 1; }
+    }
+
+    h1 {
+      font-size: 36px;
+      color: white;
+      animation: bounceIn 1s ease;
+    }
+
+    @keyframes bounceIn {
+      0% { transform: scale(0.5); opacity: 0; }
+      50% { transform: scale(1.1); opacity: 1; }
+      100% { transform: scale(1); }
     }
 
     .app-title {
-      font-size: 2em;
+      font-size: 2rem;
+      color: white;
       font-weight: bold;
-      color: #2F3BA2;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
 
     .icon-btn {
-      display: inline-block;
-      background-color: #2F3BA2;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      background-color: transparent;
       color: white;
-      padding: 15px 30px;
-      border-radius: 5px;
+      font-size: 18px;
+      padding: 12px 24px;
+      border-radius: 30px;
+      border: 2px solid #FF6A00;
+      transition: all 0.3s ease;
+      margin-top: 20px;
+      animation: pulse 1.5s infinite;
       text-decoration: none;
-      margin: 10px 0;
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.1); opacity: 0.8; }
+      100% { transform: scale(1); opacity: 1; }
+    }
+
+    .icon-btn:hover {
+      background-color: rgba(255, 106, 0, 0.2);
+      cursor: pointer;
     }
 
     .icon-btn i {
-      margin-left: 10px;
+      margin-right: 10px;
     }
 
     .buttons-container {
-      margin-top: 40px;
+      margin-top: 30px;
     }
 
+    /* تطبيق تأثير Liquid Glass على الأزرار */
     .purple-btn {
-      background-color: #6A4C9C;
-      color: white;
-      padding: 12px 25px;
-      margin: 10px;
-      border-radius: 5px;
-      text-decoration: none;
       display: inline-block;
+      background: rgba(255, 255, 255, 0.1);  /* شفافية مع خلفية خفيفة */
+      color: white;
+      font-size: 18px;
+      padding: 14px 30px;
+      border-radius: 30px;
+      border: 2px solid rgba(255, 255, 255, 0.3);  /* حدود خفيفة شفافة */
+      text-decoration: none;
+      margin: 10px;
+      backdrop-filter: blur(8px);  /* تأثير طمس للخلفية */
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);  /* ظل خفيف */
+      transition: all 0.3s ease;
+      position: relative;
+      overflow: hidden;
     }
 
     .purple-btn:hover {
-      background-color: #5A3A7D;
+      background: rgba(255, 255, 255, 0.2);  /* عند التمرير يتم زيادة الشفافية */
+      border-color: rgba(255, 255, 255, 0.6); /* زيادة الشفافية عند التمرير */
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);  /* ظل أقوى */
     }
 
-    .purple-btn i {
-      margin-left: 10px;
+    .purple-btn:active {
+      transform: scale(0.98);
+    }
+
+    @media (max-width: 768px) {
+      .container {
+        width: 80%;
+        padding: 30px;
+      }
+
+      h1 {
+        font-size: 28px;
+      }
+
+      .app-title {
+        font-size: 1.5rem;
+      }
+
+      .purple-btn {
+        padding: 12px 25px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .container {
+        width: 90%;
+        padding: 20px;
+      }
+
+      h1 {
+        font-size: 24px;
+      }
+
+      .app-title {
+        font-size: 1.2rem;
+      }
+
+      .purple-btn {
+        padding: 10px 20px;
+      }
     }
   </style>
 </head>
@@ -76,6 +201,7 @@
   <div class="container">
     <div class="app-title">MRMODS App v1</div>
     
+    <!-- زر مع رابط ينتقل في نفس النافذة -->
     <a href="main.html" class="icon-btn">
       <i class="fas fa-certificate"></i>
       شهادات مجانية للآيفون
@@ -87,18 +213,5 @@
       <a href="https://mrmods-repo.netlify.app/" class="purple-btn">سورس الجيليبريك</a>
     </div>
   </div>
-
-  <script>
-    // تسجيل الـ Service Worker
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/service-worker.js')
-        .then((registration) => {
-          console.log('Service Worker مسجل بنجاح:', registration);
-        })
-        .catch((error) => {
-          console.log('فشل تسجيل الـ Service Worker:', error);
-        });
-    }
-  </script>
 </body>
 </html>
