--- a/main.html
+++ b/main.html
@@ -155,8 +155,8 @@
       max-height: 300px;
       overflow-y: auto;
       font-family: monospace;
-      color: #000000; /* اللون الأسود */
-      font-weight: bold; /* النص غامق */
+      color: #000000;
+      font-weight: bold;
     }
 
     .download-btn {
@@ -225,7 +225,6 @@
   <div class="container">
     <div class="app-title">MRMODS App</div>
 
-       <!-- عرض السكربت في مساحة ثابتة -->
     <div class="script-container">
       <pre id="script-display">
        AppleP12.com : الباسور
@@ -238,15 +237,20 @@ Beijing Esensoft Co., Ltd.
 
   الحالة:
 🟢 الشهادة تعمل
-
       </pre>
     </div>
 
-    <!-- زر التحميل المباشر -->
-    <a href="https://filesharingbot-by-aj.onrender.com/dl/686826d7f5524635f472cc2f" class="download-btn" download>
-      تحميل ملف الشهادة
+    <div class="buttons-container">
+      <!-- رابط تحميل ملف الشهادة -->
+      <a href="https://filesharingbot-by-aj.onrender.com/dl/686826d7f5524635f472cc2f" class="download-btn" download>
+        تحميل ملف الشهادة
+      </a>
+
+      <!-- رابط تثبيت الايزاين مباشر -->
       <a href="https://sign.applep12.com/Install/68689701-8acf-6e01-0079-849c429186a4" class="download-btn" download>
-      تثبيت ايساين مباشر
-    </a>
+        تثبيت ايساين مباشر
+      </a>
+    </div>
+  </div>
 </body>
 </html>
