--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>MRMODS App v1</title>
 
   <!-- تعيين أيقونة الموقع (favicon) -->
-  <link rel="icon" href="https://cdn4.cdn-telegram.org/file/WPXRkyFdcvM5hfu21Wa5KwzYv1FtqXW8be8_WnhrdqNHTDE2qqbKQOYUmpljZgOgdBOeA77gcOz8u7Wg5N38NY01N3x3UUNyQ3DqOSEf71qLscTEL4XTwSwkmi93w__8w3RVDrkRPdj5jOKP5_2dbNgOLL0VDIH_ZEcNLh2SRegiCeyNuw7th83OUXd_bZ1AFos_fSXKKAmwl9w4Ugf-PfrDvoCPkGixpU7tO68o5oNNPotet8I6WZ234_kBQRYtxZOqL5iVwUFLK-DEun1jwJyZCFZwvL6U6pQbvLBhL_tymJ0hlPf94gBXkaFSgiD8TUEf6v1yUmImWi0FB1xxeA.jpg" type="image/jpeg">
+  <link rel="icon" href="https://avatars.githubusercontent.com/u/196933094?v=4" type="image/jpeg">
   
   <!-- المانيفست -->
   <link rel="manifest" href="data:application/json,{
