--- a/index.html
+++ b/index.html
@@ -8,27 +8,8 @@
   <!-- تعيين أيقونة الموقع (favicon) -->
   <link rel="icon" href="https://avatars.githubusercontent.com/u/196933094?v=4" type="image/jpeg">
   
-  <!-- المانيفست -->
-  <link rel="manifest" href="data:application/json,{
-    "name": "MRMODS App v1",
-    "short_name": "MRMODS v1",
-    "start_url": "./index.html",
-    "display": "standalone",
-    "background_color": "#000000",
-    "theme_color": "#2F3BA2",
-    "icons": [
-      {
-        "src": "https://cdn4.cdn-telegram.org/file/WPXRkyFdcvM5hfu21Wa5KwzYv1FtqXW8be8_WnhrdqNHTDE2qqbKQOYUmpljZgOgdBOeA77gcOz8u7Wg5N38NY01N3x3UUNyQ3DqOSEf71qLscTEL4XTwSwkmi93w__8w3RVDrkRPdj5jOKP5_2dbNgOLL0VDIH_ZEcNLh2SRegiCeyNuw7th83OUXd_bZ1AFos_fSXKKAmwl9w4Ugf-PfrDvoCPkGixpU7tO68o5oNNPotet8I6WZ234_kBQRYtxZOqL5iVwUFLK-DEun1jwJyZCFZwvL6U6pQbvLBhL_tymJ0hlPf94gBXkaFSgiD8TUEf6v1yUmImWi0FB1xxeA.jpg",
-        "sizes": "192x192",
-        "type": "image/jpg"
-      },
-      {
-        "src": "https://cdn4.cdn-telegram.org/file/WPXRkyFdcvM5hfu21Wa5KwzYv1FtqXW8be8_WnhrdqNHTDE2qqbKQOYUmpljZgOgdBOeA77gcOz8u7Wg5N38NY01N3x3UUNyQ3DqOSEf71qLscTEL4XTwSwkmi93w__8w3RVDrkRPdj5jOKP5_2dbNgOLL0VDIH_ZEcNLh2SRegiCeyNuw7th83OUXd_bZ1AFos_fSXKKAmwl9w4Ugf-PfrDvoCPkGixpU7tO68o5oNNPotet8I6WZ234_kBQRYtxZOqL5iVwUFLK-DEun1jwJyZCFZwvL6U6pQbvLBhL_tymJ0hlPf94gBXkaFSgiD8TUEf6v1yUmImWi0FB1xxeA.jpg",
-        "sizes": "512x512",
-        "type": "image/jpg"
-      }
-    ]
-  }">
+  <!-- المانيفيست -->
+  <link rel="manifest" href="/manifest.json">
 
   <meta name="theme-color" content="#2F3BA2">
 
@@ -213,6 +194,20 @@
       <a href="https://mrmods-repo.netlify.app/" class="purple-btn">سورس الجيليبريك</a>
     </div>
   </div>
+
+  <script>
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", () => {
+        navigator.serviceWorker
+          .register("/service-worker.js")
+          .then((registration) => {
+            console.log("Service Worker Registered", registration);
+          })
+          .catch((error) => {
+            console.log("Service Worker Registration Failed", error);
+          });
+      });
+    }
+  </script>
 </body>
 </html>
- 
