--- a/index.html
+++ b/index.html
@@ -3,209 +3,75 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MRMODS App v1</title>
+  <title>MRMODS App</title>
 
-  <!-- تعيين أيقونة الموقع (favicon) -->
-  
-  <!-- المانيفيست -->
+  <!-- إضافة الأيقونة -->
+  <link rel="icon" href="https://avatars.githubusercontent.com/u/196933094?v=4" type="image/jpeg">
+
+  <!-- إضافة المانيفيست -->
   <link rel="manifest" href="/manifest.json">
 
+  <!-- تخصيص اللون الخاص بالتطبيق -->
   <meta name="theme-color" content="#2F3BA2">
-
-  <!-- الخطوط -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  
-  <!-- إضافة أيقونات FontAwesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
   <style>
     body {
       font-family: 'Roboto', sans-serif;
       margin: 0;
       padding: 0;
-      background: url('https://server.wallpaperalchemy.com/storage/wallpapers/50/majestic-lighthouse-on-icy-cliff-4k-wallpaper.jpg') no-repeat center center fixed;
-      background-size: cover;
+      background-color: #f1f1f1;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      color: white;
-      animation: fadeIn 2s ease-in-out;
-    }
-
-    @keyframes fadeIn {
-      0% { opacity: 0; }
-      100% { opacity: 1; }
+      color: #333;
     }
 
     .container {
       text-align: center;
-      background: rgba(255, 255, 255, 0.1);
       padding: 40px;
       border-radius: 12px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-      max-width: 600px;
-      width: 90%;
-      border: 2px solid rgba(255, 255, 255, 0.2);
-      animation: slideUp 1s ease-out;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      background-color: #fff;
     }
 
-    @keyframes slideUp {
-      0% { transform: translateY(50px); opacity: 0; }
-      100% { transform: translateY(0); opacity: 1; }
+    .hidden {
+      display: none;
     }
 
-    h1 {
-      font-size: 36px;
-      color: white;
-      animation: bounceIn 1s ease;
-    }
-
-    @keyframes bounceIn {
-      0% { transform: scale(0.5); opacity: 0; }
-      50% { transform: scale(1.1); opacity: 1; }
-      100% { transform: scale(1); }
-    }
-
-    .app-title {
-      font-size: 2rem;
-      color: white;
-      font-weight: bold;
+    .install-message {
+      font-size: 1.2rem;
+      color: #ff6a00;
       margin-bottom: 20px;
     }
 
-    .icon-btn {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      background-color: transparent;
-      color: white;
-      font-size: 18px;
-      padding: 12px 24px;
-      border-radius: 30px;
-      border: 2px solid #FF6A00;
-      transition: all 0.3s ease;
-      margin-top: 20px;
-      animation: pulse 1.5s infinite;
-      text-decoration: none;
-    }
-
-    @keyframes pulse {
-      0% { transform: scale(1); opacity: 1; }
-      50% { transform: scale(1.1); opacity: 0.8; }
-      100% { transform: scale(1); opacity: 1; }
-    }
-
-    .icon-btn:hover {
-      background-color: rgba(255, 106, 0, 0.2);
-      cursor: pointer;
-    }
-
-    .icon-btn i {
-      margin-right: 10px;
-    }
-
-    .buttons-container {
-      margin-top: 30px;
-    }
-
-    /* تطبيق تأثير Liquid Glass على الأزرار */
-    .purple-btn {
-      display: inline-block;
-      background: rgba(255, 255, 255, 0.1);  /* شفافية مع خلفية خفيفة */
-      color: white;
-      font-size: 18px;
-      padding: 14px 30px;
-      border-radius: 30px;
-      border: 2px solid rgba(255, 255, 255, 0.3);  /* حدود خفيفة شفافة */
-      text-decoration: none;
-      margin: 10px;
-      backdrop-filter: blur(8px);  /* تأثير طمس للخلفية */
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);  /* ظل خفيف */
-      transition: all 0.3s ease;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .purple-btn:hover {
-      background: rgba(255, 255, 255, 0.2);  /* عند التمرير يتم زيادة الشفافية */
-      border-color: rgba(255, 255, 255, 0.6); /* زيادة الشفافية عند التمرير */
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);  /* ظل أقوى */
-    }
-
-    .purple-btn:active {
-      transform: scale(0.98);
-    }
-
-    @media (max-width: 768px) {
-      .container {
-        width: 80%;
-        padding: 30px;
-      }
-
-      h1 {
-        font-size: 28px;
-      }
-
-      .app-title {
-        font-size: 1.5rem;
-      }
-
-      .purple-btn {
-        padding: 12px 25px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .container {
-        width: 90%;
-        padding: 20px;
-      }
-
-      h1 {
-        font-size: 24px;
-      }
-
-      .app-title {
-        font-size: 1.2rem;
-      }
-
-      .purple-btn {
-        padding: 10px 20px;
-      }
+    .normal-content {
+      display: none;
     }
   </style>
 </head>
-
 <body>
   <div class="container">
-    <div class="app-title">MRMODS App v1</div>
-    
-    <!-- زر مع رابط ينتقل في نفس النافذة -->
-    <a href="main.html" class="icon-btn">
-      <i class="fas fa-certificate"></i>
-      شهادات مجانية للآيفون
-    </a>
+    <!-- رسالة التحفيز على التثبيت -->
+    <div class="install-message" id="installMessage">يجب تثبيت التطبيق</div>
 
-    <div class="buttons-container">
-      <a href="https://t.me/MRMods_Official" class="purple-btn">قناة التيليجرام</a>
-      <a href="https://youtube.com/@mrmods-official?si=yerMnGfEtwMpasNW" class="purple-btn">قناة اليوتيوب</a>
-      <a href="https://mrmods-repo.netlify.app/" class="purple-btn">سورس الجيليبريك</a>
+    <!-- المحتوى العادي للتطبيق -->
+    <div class="normal-content" id="normalContent">
+      <h1>مرحباً بك في تطبيق MRMODS</h1>
+      <p>المحتوى العادي للتطبيق.</p>
     </div>
   </div>
 
   <script>
-    if ("serviceWorker" in navigator) {
-      window.addEventListener("load", () => {
-        navigator.serviceWorker
-          .register("/service-worker.js")
-          .then((registration) => {
-            console.log("Service Worker Registered", registration);
-          })
-          .catch((error) => {
-            console.log("Service Worker Registration Failed", error);
-          });
-      });
+    // فحص إذا كان التطبيق يعمل في وضع PWA
+    if (window.matchMedia('(display-mode: standalone)').matches) {
+      // إذا كان التطبيق مثبتًا كـ PWA، عرض المحتوى العادي
+      document.getElementById('installMessage').classList.add('hidden');
+      document.getElementById('normalContent').classList.remove('hidden');
+    } else {
+      // إذا لم يكن مثبتًا كـ PWA، عرض رسالة التثبيت
+      document.getElementById('installMessage').classList.remove('hidden');
+      document.getElementById('normalContent').classList.add('hidden');
     }
   </script>
 </body>
