--- a/main.html
+++ b/main.html
@@ -251,6 +251,13 @@ Beijing Esensoft Co., Ltd.
         تثبيت ايساين مباشر
       </a>
     </div>
+    <article class="card" data-name="Watusi-Cracked">
+      <img src="https://api.fouadraheb.com/images/items/com.fouadraheb.watusi3_thumb.png" alt="Watusi-Cracked_25.13.77-RAY" />
+      <h2>Watusi-Cracked_25.13.77-RAY</h2>
+      <a href="https://filesharingbot-by-aj.onrender.com/dl/686a3adef5524635f472cc70" class="download-btn" target="_blank" rel="noopener noreferrer">تحميل التطبيق</a>
+    </article>
+  </section>
+</main>
   </div>
 </body>
 </html>
