--- a/main.html
+++ b/main.html
@@ -236,18 +236,18 @@ Beijing Esensoft Co., Ltd.
 2025-07-05 03:08:08 GMT+08:00
 
   الحالة:
-🟢 الشهادة تعمل
+🔴 الشهادة لا تعمل
       </pre>
     </div>
 
     <div class="buttons-container">
       <!-- رابط تحميل ملف الشهادة -->
-      <a href="https://filesharingbot-by-aj.onrender.com/dl/686826d7f5524635f472cc2f" class="download-btn" download>
+      <a href="zzzzzzzzz" class="download-btn" download>
         تحميل ملف الشهادة
       </a>
 
       <!-- رابط تثبيت الايزاين مباشر -->
-      <a href="https://sign.applep12.com/Install/68689701-8acf-6e01-0079-849c429186a4" class="download-btn" download>
+      <a href="zzzzzzzz" class="download-btn" download>
         تثبيت ايساين مباشر
       </a>
     </div>
