--- a/main.html
+++ b/main.html
@@ -230,24 +230,24 @@
        AppleP12.com : الباسور
 
  اسم الشهادة:
-Beijing Esensoft Co., Ltd.
+BMW Brilliance Automotive Ltd.
 
  وقت صدور الشهادة:
-2025-07-05 03:08:08 GMT+08:00
+2025-07-24 00:23:27 GMT+08:00
 
   الحالة:
-🔴 الشهادة لا تعمل
+🟢 الشهادة  تعمل
       </pre>
     </div>
 
     <div class="buttons-container">
       <!-- رابط تحميل ملف الشهادة -->
-      <a href="zzzzzzzzz" class="download-btn" download>
+      <a href="https://dl.nogutsnoglory.eu.org/1953785/BMW+Brilliance+Automotive+Ltd.zip?hash=PtwG2fA?" class="download-btn" download>
         تحميل ملف الشهادة
       </a>
 
       <!-- رابط تثبيت الايزاين مباشر -->
-      <a href="zzzzzzzz" class="download-btn" download>
+      <a href="https://sign.applep12.com/Install/68817cdf-61f1-9501-00ec-9977645827d6" class="download-btn" download>
         تثبيت ايساين مباشر
       </a>
     </div>
